2005-02-13  Michael Vogt  <mvogt@acm.org>

	* network.pl.in (gst_network_enable_isdn): made it really work with
	ISDN

2005-02-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* general.pl.in: added stupid missing function in i18n initialization.
	Fixes #167095
	* xml.pl.in: cosmetic fix

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added some extra stability to the dhclient call in
	enable_iface_with_config, made it truly return whether it has failed

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* configure.in: small fix to make it compile separatedly, now that the
	backend is divided from the frontend

2005-02-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: made a string more user-frienly (Ole Laursen's
	suggestion). Fixes #166330

2005-02-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: Only add an empty ppp0 interface if it wasn't added
	before and pppd exists

2005-01-31  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: detect whether to use md5 or not from the pam setup.
	Fixes #161269. Removed default groups from all distros

2005-01-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: update the correct server status in debian

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* parse.pl.in: Fixed hosts file parsing when there's more than
	one line per IP address

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90

2005-01-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: unbreak list_ifaces directive
	* shares-conf.in: unbreak interfaces detection for nfs acl addition
	dialog

2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (drop_dhcp_connection): function to drop dhclient
	proccess when disabling an interface. (enable_iface_with_config): use
	this. Definitely fixes bug #157343
